--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,20 @@ h1 {
   background-position: center;
   background-size: 30px 30px;
 }
+
+.bottom-container {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 12px;
+}
+
+.filter-container {
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-inline: 20px;
+}
