--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400&display=swap");
+
 .App {
   text-align: center;
   height: 100vh;
@@ -22,11 +23,12 @@
 }
 
 h1 {
-  padding-top: 12%;
+  padding-top: 10%;
   letter-spacing: 15px;
 
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 32px;
+  margin-left: -10%;
 }
 
 .App-link {
@@ -64,6 +66,7 @@ h1 {
   display: flex;
   align-items: center;
   padding: 10px 20px;
+  font-size: 21px;
 }
 .hide-delete {
   visibility: hidden;
@@ -77,6 +80,11 @@ h1 {
   padding-top: 1%;
   max-width: none;
   margin: 0;
+  font-weight: 100;
+}
+.checked {
+  text-decoration: line-through;
+  color: hsl(234, 11%, 52%);
 }
 
 .card {
@@ -98,13 +106,19 @@ h1 {
 
 .input-container {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .input {
-  width: 85%;
+  font-family: "Josefin Sans", sans-serif;
+  display: flex;
+  width: 60%;
   height: 75%;
   border: none;
-  font-size: 18px;
+  font-size: 21px;
   background-color: hsla(235, 24%, 19%, 1);
+  color: hsl(234, 39%, 85%);
+  font-weight: 100;
 }
 .input:focus {
   outline: none;
@@ -115,7 +129,7 @@ h1 {
   height: 30px;
   width: 30px;
   margin-right: 12px;
-  border: 1px solid gray;
+  border: 1px solid hsl(234, 11%, 52%);
   border-radius: 50%;
   cursor: pointer;
   background-color: inherit;
@@ -173,5 +187,16 @@ h1 {
     width: 90%;
     margin: 0 auto;
     max-width: 400px;
+  }
+  .characters li,
+  .bottom-container {
+    width: 90%;
+    justify-content: space-around;
+  }
+  .filter-container {
+    gap: 20px;
+  }
+  .input-container {
+    width: 250px;
   }
 }
